--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+.App-image{
+  width:15rem;
+  height:10rem ;
+  margin: 2rem;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.videoo{
+  max-width: 50 rem;
+  max-height:50 rem ; 
+  margin: 2rem;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.camp{
+  margin-left: 2rem;
+  width: 20rem;
+  height:10rem ;
+  margin: 2rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
-  flex-direction: column;
+  justify-content:center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin-top: 2rem;
+  border-radius: 5rem; 
+  background-color: aqua;
 }
